# knowledgegraph-chatbot

./: .gitignore  Makefile  README.md  pyproject.toml  ruff.toml
_obsolete/: experts_downloader.ipynb  graph_rag_notebook.ipynb  indexer.ipynb  main.py  merger.ipynb  retrieve_KB.ipynb
notebooks/: retrieve_graphragtoolkit.ipynb
src/graph_rag/: __init__.py
src/graph_rag/core/: __init__.py  retrieve.py
tools/: __init__.py  build_graph.py  export.py
utilities/: __init__.py  anonymize.py
